halo2 arithmetic example

--- a/halo2-examples/Cargo.toml
+++ b/halo2-examples/Cargo.toml
@@ -7,5 +7,9 @@ edition = "2021"
 name = "addition"
 path = "src/addition.rs"
 
+[[bin]]
+name = "arithmetic"
+path = "src/arithmetic.rs"
+
 [dependencies]
 halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", tag = "v0.4.0" }
