halo2 ite example

--- a/halo2-examples/Cargo.toml
+++ b/halo2-examples/Cargo.toml
@@ -3,6 +3,9 @@ name = "halo2-examples"
 version = "0.1.0"
 edition = "2021"
 
+[dependencies]
+halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", tag = "v0.4.0" }
+
 [[bin]]
 name = "addition"
 path = "src/addition.rs"
@@ -11,5 +14,6 @@ path = "src/addition.rs"
 name = "arithmetic"
 path = "src/arithmetic.rs"
 
-[dependencies]
-halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", tag = "v0.4.0" }
+[[bin]]
+name = "ite"
+path = "src/ite.rs"
